# CloneSeisComP

./: CMakeLists.txt  homepage.h  login.ui.autosave  mainwindow.ui
CloningSeisComP/: CMakeLists.txt  CMakeLists.txt.user.14504f3  CMakeLists.txt.user.ef5c36c.xml  homepage.cpp  homepage.ui  login.cpp  login.h  login.ui  main.cpp
CloningSeisComP/database/: users.db
